[package]
name = "pest_duckyscript"
version = "14.0.0"
description = "Hak5 DuckyScript and MallardScript language grammers - used for parsing/compilation."
license-file = "LICENSE"
documentation = "https://github.com/Nate-Wilkins/pest_duckyscript"
homepage = "https://github.com/Nate-Wilkins/pest_duckyscript"
repository = "https://github.com/Nate-Wilkins/pest_duckyscript"
authors = ["nate-wilkins <nate-wilkins@code-null.com>"]

[dependencies]
anyhow = "1.0.38"
pest = "2.5.2"
pest_derive = "2.5.2"

[dev-dependencies]
predicates = "1"
pretty_assertions = "1.3.0"
